// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update removed symbols warnings adds TODO comment for TUI_MONTH_FORMATTER import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TUI_MONTH_FORMATTER} from '@taiga-ui/kit';
                import {TuiMonth} from '@taiga-ui/cdk';
                import {of} from 'rxjs';

                @Component({
                    providers: [
                        {
                            provide: TUI_MONTH_FORMATTER,
                            useValue: (month: TuiMonth) => of(\`\${month.formattedYear}/\${month.month + 1}\`),
                        },
                    ],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TUI_MONTH_FORMATTER has been removed. Month display now uses TUI_MONTHS from @taiga-ui/core — an array of 12 month-name strings. Provide it via tuiLanguageSwitcher or override TUI_MONTHS directly instead of providing a formatter function.
                import {TUI_MONTH_FORMATTER} from '@taiga-ui/kit';
                import {TuiMonth} from '@taiga-ui/cdk';
                import {of} from 'rxjs';

                @Component({
                    providers: [
                        {
                            provide: TUI_MONTH_FORMATTER,
                            useValue: (month: TuiMonth) => of(\`\${month.formattedYear}/\${month.month + 1}\`),
                        },
                    ],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiAnimationPipe import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiAnimationPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiAnimationPipe],
                    template: '<div [@animation]="options | tuiAnimation"></div>',
                })
                export class TestComponent {
                    protected readonly options = {value: 'active'};
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiAnimationPipe (| tuiAnimation) has been removed. It scaled Angular animation params by the global animation speed. Build the params in the component instead: inject TUI_ANIMATIONS_SPEED and multiply your duration by tuiGetDuration(speed) (both still in @taiga-ui/core).
                import {TuiAnimationPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiAnimationPipe],
                    template: '<div [@animation]="options | tuiAnimation"></div>',
                })
                export class TestComponent {
                    protected readonly options = {value: 'active'};
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiIsPresentPipe import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiIsPresentPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiIsPresentPipe],
                    template: '@if (value | tuiIsPresent) { {{value}} }',
                })
                export class TestComponent {
                    protected readonly value: number | null = 1;
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiIsPresentPipe (| tuiIsPresent) has been removed, but the tuiIsPresent() utility it wrapped still exists in @taiga-ui/cdk. Call tuiIsPresent(value) in the component, or use a native null check (value != null) / @if in the template.
                import {TuiIsPresentPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiIsPresentPipe],
                    template: '@if (value | tuiIsPresent) { {{value}} }',
                })
                export class TestComponent {
                    protected readonly value: number | null = 1;
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiKeysPipe import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiKeysPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiKeysPipe],
                    template: '<span>{{ (dictionary | tuiKeys).length }}</span>',
                })
                export class TestComponent {
                    protected readonly dictionary = {a: 1, b: 2};
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiKeysPipe (| tuiKeys) has been removed. It returned Object.keys(value); use the built-in Angular keyvalue pipe, or expose Object.keys(value) from the component.
                import {TuiKeysPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiKeysPipe],
                    template: '<span>{{ (dictionary | tuiKeys).length }}</span>',
                })
                export class TestComponent {
                    protected readonly dictionary = {a: 1, b: 2};
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiReplacePipe import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiReplacePipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiReplacePipe],
                    template: '<span>{{ text | tuiReplace: "-" : " " }}</span>',
                })
                export class TestComponent {
                    protected readonly text = 'a-b-c';
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiReplacePipe (| tuiReplace) has been removed. It was a thin wrapper over String.prototype.replace; call value.replace(search, replaceValue) in the component (or a computed) instead.
                import {TuiReplacePipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiReplacePipe],
                    template: '<span>{{ text | tuiReplace: "-" : " " }}</span>',
                })
                export class TestComponent {
                    protected readonly text = 'a-b-c';
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiStaticRequestService import: test.ts 1`] = `
{
  "0. Before": "
                import {Component, inject} from '@angular/core';
                import {TuiStaticRequestService} from '@taiga-ui/legacy';

                @Component({})
                export class TestComponent {
                    private readonly staticRequest = inject(TuiStaticRequestService);

                    protected load(url: string) {
                        return this.staticRequest.request(url);
                    }
                }
            ",
  "1. After": "
                import {Component, inject} from '@angular/core';
// TODO: (Taiga UI migration) TuiStaticRequestService has been removed. Replace usages of service.request(url) with native fetch(url).then(r => r.text()). Add your own caching layer (e.g. a Map or shareReplay) if you need it.
                import {TuiStaticRequestService} from '@taiga-ui/legacy';

                @Component({})
                export class TestComponent {
                    private readonly staticRequest = inject(TuiStaticRequestService);

                    protected load(url: string) {
                        return this.staticRequest.request(url);
                    }
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiToArrayPipe import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiToArrayPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiToArrayPipe],
                    template: '<span>{{ (set | tuiToArray).length }}</span>',
                })
                export class TestComponent {
                    protected readonly set = new Set([1, 2, 3]);
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiToArrayPipe (| tuiToArray) has been removed. It returned Array.from(value) for a Map/Set/QueryList; call Array.from(value) (or spread [...value]) in the component instead.
                import {TuiToArrayPipe} from '@taiga-ui/cdk';

                @Component({
                    imports: [TuiToArrayPipe],
                    template: '<span>{{ (set | tuiToArray).length }}</span>',
                })
                export class TestComponent {
                    protected readonly set = new Set([1, 2, 3]);
                }
            ",
}
`;

exports[`ng-update removed symbols warnings adds TODO comment for TuiWrapperDirective import: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiWrapperDirective} from '@taiga-ui/legacy';

                @Component({
                    imports: [TuiWrapperDirective],
                    template: '<div tuiWrapper [disabled]="true"></div>',
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component} from '@angular/core';
// TODO: (Taiga UI migration) TuiWrapperDirective ([tuiWrapper]) has been removed. Use the tuiAppearance directive from @taiga-ui/core to set the visual appearance; interactive states now resolve automatically from the host element. See https://taiga-ui.dev/appearances
                import {TuiWrapperDirective} from '@taiga-ui/legacy';

                @Component({
                    imports: [TuiWrapperDirective],
                    template: '<div tuiWrapper [disabled]="true"></div>',
                })
                export class TestComponent {}
            ",
}
`;
